# sunsynk-home-assistant

./: .env.example  .gitignore  LICENSE  README.md  hacs.json  main.py  pyproject.toml
.github/workflows/: ci.yml
custom_components/sunsynk/: __init__.py  auth.py  config_flow.py  const.py  data_fetcher.py  diagnostics.py  helpers.py  icons.json  manifest.json  number.py  quality_scale.yaml  select.py  sensor.py  strings.json  switch.py
custom_components/sunsynk/translations/: en.json
tests/: conftest.py  test_config_flow.py  test_const.py  test_data_fetcher.py  test_diagnostics.py  test_helpers.py  test_init.py  test_number.py  test_select.py  test_sensor.py  test_switch.py
