[project]
name = "remote-sunsynk-home-assistant"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "cryptography>=46.0.5",
    "python-dotenv>=1.2.2",
    "sunsynk-api-client",
]

[tool.uv.sources]
sunsynk-api-client = { git = "https://github.com/chattersley/sunsynk-python" }

[dependency-groups]
dev = [
    "pytest>=9.0.2",
]
