[project]
name = "remote-sunsynk-home-assistant"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "cryptography>=46.0.5",
    "homeassistant>=2026.2.3",
    "python-dotenv>=1.2.2",
    "sunsynk-python>=0.1.8",
]

[dependency-groups]
dev = [
    "pytest>=9.0.2",
]
