[project]
name = "remote-sunsynk-home-assistant"
version = "0.1.0"
description = "Home Assistant HACS integration for SunSynk solar inverters"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "cryptography>=46.0.5",
    "homeassistant>=2026.2.3",
    "python-dotenv>=1.2.2",
    "sunsynk-python>=0.1.8",
]

[dependency-groups]
dev = [
    "pytest-homeassistant-custom-component>=0.13.0",
    "ruff>=0.11.0",
]

[tool.ruff]
target-version = "py313"
line-length = 120

[tool.ruff.lint]
select = [
    "E",      # pycodestyle errors
    "W",      # pycodestyle warnings
    "F",      # pyflakes
    "I",      # isort
    "UP",     # pyupgrade
    "B",      # flake8-bugbear
    "SIM",    # flake8-simplify
    "RUF",    # ruff-specific
]
ignore = [
    "E501",   # line too long (handled by formatter)
]

[tool.ruff.lint.isort]
known-first-party = ["custom_components.sunsynk"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
